Update README to reflect JavaFX architecture; minor IntelliJ config update